# ChangeLog for sys-fs/squashfs-tools
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/squashfs-tools/ChangeLog,v 1.11 2004/09/05 08:26:17 swegener Exp $

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  squashfs-tools-1.3.ebuild, squashfs-tools-2.0.ebuild:
  Masked squashfs-tools-2.0.ebuild stable for ppc

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  squashfs-tools-1.3.ebuild:
  Masked squashfs-tools-1.3.ebuild stable for ppc

  26 Aug 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  squashfs-tools-2.0.ebuild:
  Stable on sparc

  18 Jul 2004; Tom Gall <tgall@gentoo.org> squashfs-tools-2.0.ebuild:
  stable on ppc64, bug #57487 

  16 Jul 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  squashfs-tools-2.0.ebuild:
  Marked stable on x86 and amd64.

*squashfs-tools-2.0 (13 Jul 2004)

  13 Jul 2004; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml,
  +squashfs-tools-2.0.ebuild:
  Changed maintainer to livecd and adding squashfs-tools-2.0 for use with the
  2004.2 livecd.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  squashfs-tools-1.3.ebuild, squashfs-tools-2.0_alpha.ebuild:
  virtual/glibc -> virtual/libc

  20 Jun 2004; <solar@gentoo.org> :
  digest fix

*squashfs-tools-2.0_alpha (04 Jun 2004)

  04 Jun 2004; Daniel Black <dragonheart@gentoo.org>
  +squashfs-tools-2.0_alpha.ebuild:
  version bump thanks to Stefan Schweizer <stefan-schweizer@gmx.de> in bug #52038

  04 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  +squashfs-tools-1.3.ebuild:
  Moved from sys-apps/squashfs-tools to sys-fs/squashfs-tools.

  03 May 2004; Mike Frysinger <vapier@gentoo.org> :
  Clean up ebuild and make it look nice.

  26 Apr 2004; Daniel Black <dragonheart@gentoo.org> metadata.xml:
  Added embedded to the ownership. version 1.3 is realy 1.3_p3. Can the next