@@ -1,6 +1,13 @@
 # ChangeLog for sys-fs/squashfs-tools
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/squashfs-tools/ChangeLog,v 1.11 2004/09/05 08:26:17 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/squashfs-tools/ChangeLog,v 1.12 2004/09/07 05:19:03 dragonheart Exp $
+
+*squashfs-tools-2.0_p2 (07 Sep 2004)
+
+  07 Sep 2004; Daniel Black <dragonheart@gentoo.org>
+  +squashfs-tools-2.0_p2.ebuild:
+  version bumped as per bug #54103. Thanks Thomas Weidner <3.14159@gmx.net> for
+  initial testing. src_test routine added
 
   05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
   Fixed ChangeLog header.
